--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Doxygenize
       # You may pin to the exact commit or the version.
       # uses: langroodi/doxygenize@3561c1a509bc53ac3bd032430b89d610dd44f02f
-      uses: pviscone/doxygenize@v1.6.3
+      uses: DenverCoder1/doxygen-github-pages-action@v1
       with:
         # Doxygen configuration file path
         doxygenconf: ./Doxyfile
