--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,34 +1,12 @@
-# This is a basic workflow to help you get started with Actions
-
-name: docs
 on:
   push:
-    branches: [ "main" ]
+    branches:
+    - main
 
-env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  BUILD_TYPE: Release
-
-jobs:
-  build:
-    # The CMake configure and build commands are platform agnostic and should work equally well on Windows or Mac.
-    # You can convert this to a matrix build if you need cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Doxygenize
-      # You may pin to the exact commit or the version.
-      # uses: langroodi/doxygenize@3561c1a509bc53ac3bd032430b89d610dd44f02f
-      uses: DenverCoder1/doxygen-github-pages-action@v1
-      with:
-        # Doxygen configuration file path
-        doxygenconf: ./Doxyfile
-        # Generated HTML documents output folder
-        htmloutput: ./
-        # GitHub Pages branch name
-        ghpagesbranch: docs
-        # GitHub Pages directory path
-        ghpagesdir: ./
+- name: Doxygen Action
+  # You may pin to the exact commit or the version.
+  # uses: mattnotmitt/doxygen-action@411df0c62acb5b96b8a93d93a7bf4b753c47ea05
+  uses: mattnotmitt/doxygen-action@1.9.5
+  with:
+    doxyfile-path: ./Doxyfile
+    working-directory: .
