--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,32 +1,15 @@
-name: Documentation
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
-on:
-  push:
-    branches: [ main ]
-
-jobs:
-  build-documentation:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    
-    # Build the HTML documentation
-    - name: Doxygen Action
-      uses: mattnotmitt/doxygen-action@v1.1.0
-      with:
-          doxyfile-path: ./Doxyfile
-          working-directory: .
-    
-    # Deploy the HTML documentation to GitHub Pages
-    - name: GH Pages Deployment
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./doc/html/
-        enable_jekyll: false
-        allow_empty_commit: false
-        force_orphan: true
-        publish_branch: gh-pages
+- name: Doxygenize
+  # You may pin to the exact commit or the version.
+  # uses: langroodi/doxygenize@542946a13bc9021f5ba07c8751e6ab3d84bca154
+  uses: langroodi/doxygenize@v1.7.0
+  with:
+    # Doxygen configuration file path
+    doxygenconf: ./Doxyfile
+    # Generated HTML documents output folder
+    htmloutput: ./docs/
+    # GitHub Pages branch name
+    ghpagesbranch: gh-pages
+    # GitHub Pages directory path
+    ghpagesdir: ./
+    # Custom Doxygen pages header HTML file URL
+    customheader: # optional, default is 
