--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,13 +1,14 @@
-- name: Doxygen Action
-  # You may pin to the exact commit or the version.
-  # uses: mattnotmitt/doxygen-action@411df0c62acb5b96b8a93d93a7bf4b753c47ea05
-  uses: mattnotmitt/doxygen-action@1.9.5
-  with:
-    # Path to Doxyfile
-    doxyfile-path: # default is ./Doxyfile
-    # Working directory
-    working-directory: # default is .
-    # Generate latex documentation
-    enable-latex: # optional
-    # Extra alpine packages for the build environment
-    additional-packages: # optional, default is 
+name: Doxygen GitHub Pages Deploy Action
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: DenverCoder1/doxygen-github-pages-action@v1.2.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
