--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,14 +1,47 @@
-name: Doxygen GitHub Pages Deploy Action
-
-on:
+name: Documentation generation CI
+on: 
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: DenverCoder1/doxygen-github-pages-action@v1.2.0
+    - uses: actions/checkout@v2
+    - name: Doxygen Action C++
+      uses: mattnotmitt/doxygen-action@v1.3.1 
+      with:
+        working-directory: '.'
+        doxyfile-path: './Doxyfile'
+
+    # store the doc files
+    - name: Upload Output Directory 
+      uses: actions/upload-artifact@v2
+      with:
+        name: doc-files
+        path: docs 
+        retention-days: 1
+  copy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      # checkout the gh-pages branch
+      - uses: actions/checkout@v2
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          ref: gh-pages
+      # download the doc files, most of which are generated above
+      - name: Download Output Directory 
+        uses: actions/download-artifact@v2 
+        with:
+          name: doc-files
+          path: docDir
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v7
+        with:
+          author_name: Matteo Brini
+          author_email: brinimatteo@gmail.com
+          message: 'Update docs'
+          branch: gh-pages
+          add: 'docDir/doxygen/CC/html/*'
